Ajuste de Upload com MinIO
