# app/Http/Controllers/FotoPessoaController.php
@@ -4,9 +4,11 @@ namespace App\Http\Controllers;
 
 use App\Models\FotoPessoa;
 use App\Models\Pessoa;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Storage;
 use Illuminate\Support\Str;
+use League\Flysystem\AwsS3V3\PortableVisibilityConverter;
 
 class FotoPessoaController extends Controller
 {
@@ -42,7 +44,7 @@ class FotoPessoaController extends Controller
      *         @OA\JsonContent(
      *             @OA\Property(property="success", type="boolean"),
      *             @OA\Property(property="message", type="string"),
-     *             @OA\Property(property="file_path", type="string")
+     *             @OA\Property(property="file", type="string")
      *         )
      *     ),
      *     @OA\Response(response=400, description="Erro no upload"),
@@ -53,21 +55,77 @@ class FotoPessoaController extends Controller
     
     public function upload(Request $request)
     {
+        $pessoa = Pessoa::where('pes_id', $request->pes_id)->first();
+
+        $request->validate([
+            'pes_id' => 'required|integer',
+            'file' => 'required|file|max:10240', // Max 10MB
+        ]);
+
+        if(!$pessoa){
+            return response()->json(['message' => 'Pessoa não encontrada', 404]);
+        }        
+        
+        $path = $request->file('file')->store('fotos/uploads', 's3');
+        //$path = Storage::disk('s3')->put('uploads/{$request->pes_id}', $request->file('file'));
+        
+        $foto = FotoPessoa::create([
+            'pes_id' => $pessoa->pes_id,
+            'fp_data' => Carbon::now(),
+            'fp_bucket' => env('AWS_BUCKET'),
+            'fp_hash' => $path,
+            
+        ]);
+        return response()->json([
+            'message' => 'Foto enviada com sucesso!',
+            'foto_url' => $path,
+        ]);
+
+        return response()->json(['message' => 'Foto cadastrada com sucesso.', 'foto-pessoa' => $foto, 200]);
+    }
+
+    public function uploadss(Request $request)
+    {
+        /*        
         $pessoa = Pessoa::findOrFail($request->pes_id);
-
-        $fileName = Str::uuid() . '.' . $request->file->extension();
-
-        $path = Storage::disk('s3')->put("fotos/{$fileName}", $request->file, 'public');
+        //$fileName = Str::uuid() . '.' . $request->file->extension();
+        //$path = Storage::disk('s3')->put("fotos/{$fileName}", $request->file, 'public');        
+        $path = $request->file('file')->store('fotos/uploads', 's3');
         $foto = FotoPessoa::create([
             'pes_id' => $pessoa->pes_id,
             'fp_bucket' => env('AWS_BUCKET'),
-            'fp_hash' => $fileName,
+            'fp_hash' => $path,
+            'fp_data' => now(),
+        ]);
+        return response()->json([
+            'message' => 'Foto enviada com sucesso!',
+            'foto_url' => $path,
+        ]);
+        */
+
+        //dd($request->pes_id);
+        
+
+        
+        $request->validate([
+            'pes_id' => 'required|integer',
+            'file' => 'required|file|max:10240', // Max 10MB
+        ]);
+
+        $path = Storage::disk('s3')->put('uploads', $request->file('file'));
+
+        $foto = FotoPessoa::create([
+            'pes_id' => $request->pes_id,
+            'fp_bucket' => env('AWS_BUCKET'),
+            'fp_hash' => $path,
             'fp_data' => now(),
         ]);
 
         return response()->json([
-            'message' => 'Foto enviada com sucesso!',
-            'foto_url' => Storage::disk('s3')->url($path),
+            'message' => 'File uploaded successfully.',
+            'path' => $path,
+            'url' => Storage::disk('minio')->url($path),
         ]);
+        
     }
 }
